[package]
name = "bevy_play"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
wasm-bindgen = "0.2.81"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
